   well.
 - Fix crash if crash database configuration does not specify a
   bug_pattern_url. Just assume None. (LP: #731526)
 - If a custom crash database does not specify a bug_pattern_url, fall back to
   using the default database's. (LP: #731526)
 - hookutils.py Update WifiSyslog regex to correctly catch application log
   messages in syslog. Thanks Mathieu Trudel-Lapierre. (LP: #732917)

1.19 (2011-02-28)
-----------------
Bug fixes:
 - Update stack unwind patterns for current glib (slightly changed function
   names), and also ignore a preceding '*'. (LP: #716251)
 - Fix crash_signature() to fail if there is an empty or too short
   StacktraceTop.
 - apt backend: Do not generate a warning if the opportunistically added -dbg
   package does not exist.
 - apt backend: Only add -dbg in --no-pkg mode, as there will be conflicts in
   normal package mode.
 - apt backend: Call tar with target cwd instead of using -C; the latter causes
   an extra openat() call which breaks with current fakechroot.
 - launchpad.py: Fix retracer crash if DistroRelease field does not exist.
 - Convert deprecated failIf()/assert_() TestCase method calls to
   assertFalse()/assertTrue().

Improvements:
 - In apport-bug, if the user specifies a PID referring to a kernel thread,
   do the right thing and file the bug against the kernel
 - In hookutils.attach_dmesg, skip over an initial truncated message if one
   is present (this happens when the ring buffer overflows)
 - Change bug patterns to just use one central file instead of per-package
   files. This allows bug patterns to be written which are not package
   specific, and is easier to maintain as well. IMPORTANT: This changed the
   format of crashdb.conf: bug_pattern_base is now obsolete, and the new
   attribute bug_pattern_url now points to the full URL/path of the patterns
   file. Thanks to Matt Zimmerman!

1.18 (2011-02-16)
-----------------
Bug fixes: