@@ -13,6 +13,8 @@ Bug fixes:
    using the default database's. (LP: #731526)
  - hookutils.py Update WifiSyslog regex to correctly catch application log
    messages in syslog. Thanks Mathieu Trudel-Lapierre. (LP: #732917)
+ - hookutils.py, attach_hardware(): Avoid error message if machine does not
+   have a PCI bus. Thanks Marcin Juszkiewicz! (LP: #608449)
 
 1.19 (2011-02-28)
 -----------------
